tests/compile_fail/invalid_type_enum.stderr
error: expected `:`, found `,`
 --> $DIR/invalid_type_enum.rs:5:6
  |
5 |     A,
  |      ^ expected `:`
